--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+lightining-pose/*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -139,3 +141,4 @@ wandb
 *.ckpt
 *lightning-quick-start-quick_start_train*
 flagged
+lightning-pose/
