--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,26 @@ hydra-joblib-launcher
 omegaconf
 # misc
 deepdiff
+# lightining pose
+numpy
+torch
+black
+fiftyone
+geomloss
+h5py
+hydra-core
+imgaug
+kornia
+matplotlib
+pandas
+pillow
+pytest
+pytorch-lightning
+sklearn
+torchtyping
+torchvision
+typeguard
+# gpus
+nvidia-pyindex
+--extra-index-url https://developer.download.nvidia.com/compute/redist
+nvidia-dali-cuda110
