--- a/requirements.txt
+++ b/requirements.txt
@@ -41,4 +41,4 @@ typeguard
 nvidia-pyindex
 --extra-index-url https://developer.download.nvidia.com/compute/redist
 nvidia-dali-cuda110
-
+-e ./lightning-pose
