--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ torchtyping
 torchvision
 typeguard
 # gpus
-# nvidia-pyindex
-#--extra-index-url https://developer.download.nvidia.com/compute/redist
-# nvidia-dali-cuda110
+nvidia-pyindex
+--extra-index-url https://developer.download.nvidia.com/compute/redist
+nvidia-dali-cuda110
 -e ./lightning-pose
