remove fo from LightningFlow 	modified:   app.py 	modified:   lai_components/run_fo_ui.py 	modified:   lai_work/bashwork.py 	modified:   lai_work/requirements.txt

--- a/lai_work/requirements.txt
+++ b/lai_work/requirements.txt
@@ -20,4 +20,4 @@ typeguard
 nvidia-pyindex
 --extra-index-url https://developer.download.nvidia.com/compute/redist
 nvidia-dali-cuda110
--e ../lightning-pose
+-e lightning-pose
