migrate label studio database to and from drive

--- a/.lightningignore
+++ b/.lightningignore
@@ -1,11 +1,12 @@
-label-studio/*
 lightning_logs/*
 outputs/*
 static/*
+data/*
 .shared
 *.ckpt
 *.shared*
 *.git*
+*.idea*
 *MNIST*
 *artifacts*
 *egg-info/*
