--- a/requirements_litpose.txt
+++ b/requirements_litpose.txt
@@ -1,4 +1,4 @@
-botocore==1.27.59  # freeze this for app
+botocore==1.27.59  # freeze this for lightning studio compatibility
 fiftyone==0.20.1
 h5py==3.8.0
 hydra-core==1.3.2
