--- a/requirements_litpose.txt
+++ b/requirements_litpose.txt
@@ -1,23 +1,23 @@
-fiftyone==0.22.1
-h5py==3.10.0
+fiftyone==0.24.0
+h5py==3.11.0
 hydra-core==1.3.2
 imgaug==0.4.0
 kaleido==0.2.1
-kornia==0.7.0
+kornia==0.7.2
 lightning
-matplotlib==3.7.3
+matplotlib==3.9.0
 moviepy==1.0.3
 nvidia-dali-cuda110  # freeze this to be cuda 11 for now
-opencv-python==4.8.1.78
-pandas==2.0.3
-pillow==9.3.0
-plotly==5.17.0
-pytest==7.4.2
-scikit-learn==1.3.1
-seaborn==0.13.0
-streamlit==1.27.2
-tensorboard==2.14.0
+opencv-python-headless==4.8.1.78
+pandas==2.2.2
+pillow==10.3.0
+plotly==5.22.0
+pytest==8.2.2
+scikit-learn==1.5.0
+seaborn==0.13.2
+streamlit==1.35.0
+tensorboard==2.16.2
 torchtyping==0.1.4
-torchvision==0.16.0
-typeguard==4.1.5
+torchvision==0.18.1
+typeguard==4.3.0
 typing==3.7.4.3
